# SFML-GUI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
UI_Engine/header/: UILibrary.hpp
UI_Engine/header/core/: ElementManager.hpp  EventBus.hpp  UIElement.hpp  UIEvent.hpp
UI_Engine/header/utils/: Interpolation.hpp  assetManager.hpp  env.hpp
UI_Engine/src/core/: ElementManager.cpp  UIElement.cpp
UI_Engine/src/utils/: assetManager.cpp
UI_Engine/widgets/: StandardLeaf.hpp  UIButton.hpp  UILabel.hpp  UISlider.hpp  UITextField.hpp
UI_Engine/widgets/container/: UIList.hpp  UIRoot.hpp
test samples/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
